# TarkikX

./: .gitignore  Data.csv  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup.py
static/css/: styles.css
static/js/: app.js
tarkikx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/: template.html
