[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "tarkikx"
version = "0.0.1"
description = "A smart, non-generative AI chatbot that fetches and summarizes information from DuckDuckGo and Wikipedia"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0.0",
    "gunicorn>=20.0.0",
    "pandas>=1.3.0",
    "wikipedia>=1.4.0",
    "requests>=2.26.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.12.0",
    "textblob>=0.17.1",
    "python-dotenv>=0.19.0",
]

[project.scripts]
dev = "app:app"

[tool.uv]
package = false
